* Fix: When there is only one Shipping Method available in the recurring shipping package, make sure that this method is treated as selected in the current session and the `woocommerce_after_shipping_rate` action runs. PR#115
* Fix: Don't anonymize new subscriptions related to old subscriptions via a resubscribe relationship. PR#121 wcs#4304 wcpay#3889

2022-02-10 - version 1.6.4
* Fix: When changing the payment method, make sure the subscription total returns $0 when `subscriptions-core` is loaded after the `woocommerce_loaded` action hook. PR#111 wcpay#3768

2022-02-07 - version 1.6.3
* Fix: Replace uses of is_ajax() with wp_doing_ajax(). PR#108 wcpay#3695 wcs#4296
* Improve handling of session data.

2022-01-19 - version 1.6.2
* Fix: Prevent fatal error when too few arguments passed to widget_title filter. PR#100

2022-01-18 - version 1.6.1
* Dev: Update the list of "export-ignore" in `.gitattributes` to include recent developer files. PR#97
* Dev: Set the composer package type to "wordpress-plugin". PR#96

2022-01-17 - version 1.6.0
* Fix: When viewing a WCPay Subscription product page, make sure other gateway's express payment buttons aren't shown. PR#87 wcpay#3401
* Fix: When viewing a WC Product page with a WCPay subscription product in cart, make sure other gateway's express payment buttons are shown. PR#87 wcpay#3401

2022-01-14 - version 1.5.0
* New: Introduce filter to allow third-parties to specify the minimum recurring amount the payment method can support. Displays a warning to the merchant when creating products below that amount. #PR89 wcpay#3542

2022-01-03 - version 1.4.0
* Fix: Simple subscription elements on the product edit page not shown/hidden when necessary. PR#80
* Fix: Prevent fatal errors on the admin subscriptions screen when a subscription fails to load. PR#84 wcpay#3596 wcs#4286
* Fix: Compatibility issue when loading subscriptions templates. PR#86 wcpay#3606 wcs#4291

2021-12-21 - version 1.3.0